# dlc-pose-estimation

./: .gitignore  DeepLabCut_Installation_Guide.md  README.md  deeplabcut_cookbook.md  environment_dlc.yml  hpc_to_wsl_transfer.md  pyproject.toml
Black-FoodLight-Atanu-2026-01-15/: config.yaml  config.yaml~
Black-FoodLight-Atanu-2026-01-15/scripts/: dlc_pipeline_gpu.slurm
Black-FoodOnly-Atanu-2026-01-06/: config.yaml  dlc_gpu-2855404.err  dlc_gpu-2855404.out
Black-FoodOnly-Atanu-2026-01-06/scripts/: dlc_pipeline.py  dlc_pipeline_cpu.slurm  dlc_pipeline_gpu.slurm
Black-ToyOnly/scripts/: dlc_pipeline.py  dlc_pipeline.slurm  dlc_pipeline_cpu.slurm  dlc_pipeline_gpu.slurm
Black-ToyRat-Atanu-2026-03-04/: config.yaml
DLC-Black-LightOnly-Atanu-2025-12-13/: 10_DLCjupyter.ipynb  config.yaml
DLC-Black-LightOnly-Atanu-2025-12-13/scripts/: common_commands.md  convert_to_grayscale.py  deeplabcut_cookbook.md  dlc_pipeline.py  (+4 more)
ElevatedMaze-Atanu-2026-03-25/: config.yaml
ElevatedMaze-Atanu-2026-04-07/: config.yaml
ElevatedMazeFood-Atanu-2026-04-04/: config.yaml
notebooks/: 10_DLCjupyter.ipynb
scripts/: __init__.py  convert_grayscale.slurm  convert_to_grayscale.py  dlc_pipeline.py  dlc_pipeline_cpu.slurm  dlc_pipeline_gpu.slurm  folders.txt  prepend_prefix.py  rename_keep_metadata.py  rename_move_task_to_front.py  rename_with_full_path_metadata.py  run_extract_outliers.sbatch  split_animal_videos.py  split_video.sh  split_video_quadrants.py  split_videos_by_quadrants.py  stitch.slurm  stitch_videos.py  stitch_videos_batch.slurm  test.py  zero_pad_trials.py
(+143 files in other folders)
