[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dlc-pose-estimation"
version = "0.1.0"
description = "Utilities for DeepLabCut pose-estimation workflows"
readme = "README.md"
requires-python = ">=3.8"
authors = [ { name = "Atanu Giri" } ]
dependencies = []

[project.scripts]
rename-keep-metadata = "scripts.rename_keep_metadata:main"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]
